# hpc

./: 1.sh  2.sh  Dockerfile  README.md  main.cpp  matrix.hpp  time.txt
hw2/: 3.sh  4.sh  CMakeLists.txt  README.md  matrix.cpp
hw3/: Makefile  monte-carlo.c  omp_bugparfoc.c  omp_bugreduction.c
